<resources>
    <!-- App -->
    <string name="app_name">ScheduleMe</string>

    <!-- Main Activity -->
    <string name="authentication_failed">Authentication failed</string>
    <string name="login">Login</string>
    <string name="register"><u>Create a new Account</u></string>
    <string name="register_alt">Register</string>
    <string name="toast_incorrect_info_warning">Invalid login information</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_maps">Map</string>
    <string name="forgot_password"><u>I forgot my password</u></string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="dialog_first_time_title">First time?</string>
    <string name="dialog_first_time_body">If this is your first time logging on with Google you will need to Authenticate your account with a Facescan</string>
    <string name="email_validation">The email address you provided is invalid</string>
    <string name="email_fill_warning">Fill in your email address</string>
    <string name="email_sent">Password reset email sent</string>
    <string name="email_sent_text">An email has been sent to the provided address. You can reset your password by following the instructions provided.</string>

    <!-- Register Page -->
    <string name="title">Title</string>
    <string name="create_task_page">Create Task Page</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="register_page">Register Page</string>
    <string name="toast_fill_warning">Please fill out all the information</string>
    <string name="repeat_password">Password confirmation</string>
    <string name="time_from">Time From</string>
    <string name="time_to">Time To</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="location">Location</string>
    <string name="done">Done</string>

    <!-- Facetec strings -->
    <string name="message">Message</string>
    <string name="initializing_face_scanner">Initializing Face Scanner ... </string>

    <!-- Activity Main -->
    <string name="authenticated">Authenticated</string>
    <string name="authenticate">Authenticate</string>
    <string name="authenticate_id">Authenticate with ID</string>

    <string name="reminders">Reminders</string>
    <string name="schedule">Schedule</string>
    <string name="internet_disabled">Internet is disabled</string>

    <!-- Activity Profile -->
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="require_login_auth">Require Login Auth</string>
    <string name="save_changes">Save Changes</string>
    <string name="failure_image_loading">Did not load the image</string>
    <string name="failure_pick_image">Did not pick an image</string>
    <string name="dialog_delete_yes">Yes</string>
    <string name="dialog_delete_no">No</string>
    <string name="dialog_change_name_title">Change Name</string>
    <string name="dialog_change_name_message">New Name</string>
    <string name="dialog_change_name_missing_info">Please fill out all the information</string>
    <string name="dialog_change_name_post">Change</string>

    <!-- Event View -->
    <string name="event_name">Event Name</string>
    <string name="event_date">Date :</string>
    <string name="event_repeating">Repeating :</string>
    <string name="event_description">Description</string>
    <string name="important_description">To view this event you will need to authenticate your self with the FACETEC scanner</string>
    <string name="photoID_description">To view this event you will need to provide a Photo ID</string>
    <string name="time_warning">You cant travel back in time</string>
    <string name="event_type">Type :</string>
    <string name="event_public">Public</string>
    <string name="event_public_code">Public code :</string>
    <string name="event_current_location">Current Location</string>
    <string name="location_warning">Please select a location</string>
    <string name="show_location">Show location on GOOGLE MAPS</string>
    <string name="important">Important</string>
    <string name="important_id">ID Authentication</string>
    <string name="authenticate_message">You must be authenticated to view IMPORTANT tasks</string>
    <string name="reminder_time">Notify me</string>
    <string name="gps_location">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="reminder">Reminder</string>
    <string name="copied_to_clipboard">Coppied to Clipboard</string>
    <string name="reminder_warning">Reminder only allowed for events</string>
    <string name="edit_task">Edit task</string>

    <!-- Spinner Values -->
    <string-array name="spinnerItems">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="spinnerItemsType">
        <item>Event</item>
        <item>Reminder</item>
    </string-array>
    <string-array name="reminderTimes">
        <item>five minutes before</item>
        <item>ten minutes before</item>
        <item>fifteen minutes before</item>
        <item>thirty minutes before</item>
        <item>one hour before</item>
    </string-array>
    <!-- Day Values -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!-- Side Bar -->
    <string name="schedule_your_day">Schedule your Day</string>
    <string name="title_activity_temp">temp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="display">Display</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="dailyAlt">Daily alternative</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="enroll_first">Enroll First</string>
    <string name="error_opening_camera">Error Opening Camera</string>
    <string name="failure_taking_picture">Failure Taking Picture</string>

    <!-- dialog change language-->
    <string name="dialog_change_language_title">Change language to english</string>
    <string name="dialog_change_language_message">The app needs to be restarted.Are you sure?</string>
    <!-- Snackbar -->
    <string name="snackbar_important_warning">You must be authenticated to delete this item</string>

    <string name="otherFeatures">Other Features</string>

    <!-- Public Event View -->
    <string name="addPublicEvent">Add a public event</string>
    <string name="publicEventHint">Public event</string>
    <string name="publicEventTitle">Enter public event code</string>
    <string name="publicEventButton">Next</string>
    <string name="publicEventAdd">Add</string>

</resources>