<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#79c5e7"
    android:backgroundTint="#79c5e7"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/white"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.33">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_rounded"
            android:backgroundTint="@color/background_color"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/hint_color"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/background_rounded"
                android:backgroundTint="@color/background_color"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="63dp"
                android:layout_height="60dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:onClick="toggleVisibility"
                app:icon="@android:drawable/ic_menu_view"
                app:iconGravity="textEnd"
                app:iconTint="#4E4949"
                app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
                app:layout_constraintTop_toTopOf="@+id/passwordEditText"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="#605C5C"
            android:foregroundTint="@color/black"
            android:text="Remember me"
            android:textColor="#605C5C"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="270dp"
                android:layout_height="80dp"
                android:backgroundTint="#27ae60"
                android:elevation="10dp"
                android:onClick="logIn"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#FFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="270dp"
                android:layout_height="80dp"
                android:backgroundTint="#2980b9"
                android:elevation="10dp"
                android:onClick="register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>
