<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    tools:context=".RegisterPage">

    <Button
        android:id="@+id/sendButton2"
        android:layout_width="310dp"
        android:layout_height="78dp"

        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#2980b9"
        android:onClick="checkRegister"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FBFBFB"
        android:textSize="30sp"
        app:iconTint="#2980b9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="62dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:foregroundTint="#3C3030"
        android:onClick="toggleVisibility1"
        app:icon="@android:drawable/ic_menu_view"
        app:iconTint="#3E3C3C"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="27dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:foregroundTint="#3C3030"
        android:onClick="toggleVisibility2"
        app:icon="@android:drawable/ic_menu_view"
        app:iconTint="#3E3C3C"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="300dp"
        android:layout_height="43dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:width="300dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="#F3EFEF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="10dp"
        android:tag="hidden"
        android:textColorHint="@color/hint_color"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="50dp"
        android:width="300dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="#F3EFEF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="10dp"
        android:tag="hidden"
        android:textColorHint="@color/hint_color"

        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="43dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="#F3EFEF"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintBottom_toTopOf="@+id/sendButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="24dp"
        android:width="300dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="#F3EFEF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/repeat_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signup_message"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>